New python files for latest exercise on yarpPython interfacing.

--- a/Code/Semester1/yarpPython/basicPython.ipynb
+++ b/Code/Semester1/yarpPython/basicPython.ipynb
@@ -99,13 +99,22 @@
     "    counter = counter + 1\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
